--- a/思路.md
+++ b/思路.md
@@ -3,3 +3,22 @@
 - 半径滤波得到需要去除的点的索引
 - 聚类将点云数据分成若干簇
 - 计算每个簇被取出的点云的数目占整个簇的点云的数目的比率，比率高的簇认为是雨雾，去除。
+
+
+
+```bash
+cd ~
+cd ~/test_ORB_SLAM2_point_cloud/src/ORB_SLAM2
+rosrun ORB_SLAM2 astra Vocabulary/ORBvoc.txt Examples/ROS/ORB_SLAM2/Astra.yaml
+```
+
+```bash
+cd ~
+roslaunch pointcloud_mapping  astra.launch
+```
+
+```bash
+
+roslaunch orbbec_camera astra_adv.launch
+```
+
