--- a/激光雷达去雨雾.md
+++ b/激光雷达去雨雾.md
@@ -6,58 +6,52 @@
 - 扬尘及雨雾特性与点云算法
 - 激光雷达灰尘、雨雾过滤的算法
 
-
-
-
-
-
-
-
-
-
-
-
-
 ## 雨雾对激光雷达的影响
 
-- 
+### 1. 光束散射与信号衰减
+
+激光脉冲在遇到雨雾时，大量的小水滴和悬浮颗粒会导致光波散射。散射主要是光波在遇到介质变化时方向的随机改变，这会引起激光束路径上的能量分散，从而减少到达目标物体和返回雷达的光强。此外，Mie散射理论表明，当散射粒子的大小接近或大于光波的波长时，散射效应更为显著，这正是雨滴对激光雷达光波的影响情况。散射导致的光强衰减会使得返回信号弱化，从而影响雷达系统的测距精度和探测距离。
+
+### 2. 非目标反射
+除了散射，雨滴和雾粒也能直接反射激光脉冲。这些非目标反射信号被激光雷达接收后，会产生所谓的“虚假回波”，即记录了非实际目标的点云数据。这些点云数据不仅无法代表实际的物体信息，还可能掩盖真实目标的反射信号，使数据解析复杂化，增加了数据处理的难度。
+
+### 3. 测量误差与噪声
+由于接收到的信号强度降低以及非目标反射信号的干扰，激光雷达的测量读数会出现误差。这种误差主要体现为距离测量的不准确，有时还可能包括角度测量的偏差。此外，散射和非目标反射增加了点云数据中的噪声水平，使得从这些数据中提取有用信息变得更加困难。
+
+### 4. 数据丢失
+在强雨雾条件下，部分激光脉冲可能因散射而完全偏离反射路径，导致信号丢失。这种信号丢失会造成点云数据中的空白区域，降低数据的完整性和可靠性。
 
 ## 雨雾点云数据的特征
 
-- 
+### 动态特性
+
+雨雾点云数据的动态特性主要表现在相邻帧数据间的运动变化。这种运动可以分解为垂直和水平两个主要方向：
+
+1. **垂直方向运动**：由于重力的作用，雨滴和雾滴主要在垂直方向上有较明显的运动。这种运动的速度和方向主要受到雨滴或雾滴的大小、重力加速度以及空气阻力等物理因素的影响。
+
+2. **水平方向运动**：风是影响雨雾点云在水平方向运动的主要因素。风力的方向和强度将直接影响雨雾的扩散范围和移动速度，尤其是在风力较大的环境中，水平方向上的运动可以变得更为显著。
+
+### 运动模式比较
+
+与行人或车辆等动态障碍物相比，雨雾点云的运动模式存在明显差异：
+
+- **雨雾点云**：如前所述，主要运动方向是垂直下落，水平运动主要由环境风速决定。这种运动模式在空间上通常更为分散且随机，与外部因素如风向和风速紧密相关。
+- **行人和车辆**：这些障碍物主要在水平方向上移动，运动轨迹相对固定和可预测。行人的步行或车辆的行驶通常沿着预定的道路或路径进行，受到地面条件、交通规则等因素的制约。
 
 
 
-## 雨雾天气对LiDAR的影响
+## 实现思路
 
-### 雾天对LiDAR的影响
-
-在雾天，空气中悬浮的水分子会导致光的扩散。具体表现为：
-
-1. **光的扩散**：水分子使得激光束在各个方向散射，导致激光能量分布更加分散。
-2. **数据噪声增加**：扩散后的光信号增加了数据中的噪声，使得LiDAR传感器难以准确区分地面点和水滴反射的信号。
-3. **数据清理困难**：由于噪声增加，后期数据处理变得更加复杂和耗时，需要耗费更多资源来清理和过滤无效数据。
-
-### 雨天对LiDAR的影响
-
-雨天对LiDAR系统的影响更加显著，主要包括：
-
-1. **光的偏折**：雨滴会使激光束发生偏折，导致激光无法沿直线路径返回传感器，从而影响距离测量的准确性。
-2. **反射光无法检测**：偏折后的激光光束可能无法被传感器有效检测，导致部分数据点缺失。
-3. **扫描器视野阻挡**：雨滴可能在飞行过程中附着在扫描器上，部分遮挡视野，进一步影响数据采集。
-4. **设备损坏风险**：长期暴露在雨中可能对无人机和LiDAR系统造成物理损坏，缩短设备寿命。
+- 深度学习图像目标检测，然后投影到点云进行数据滤除
+- ERASOR
+- raycast
+- 可视点法剔除动态点
+- Removert
+- 语义分割 点云投影到图像坐标系，然后删掉投影在语义分割判断为人的像素中的点
+-  地面参考eraser的方法，动态用raycast的方法
+- 帧间匹配
 
 
-
-**雨雪干扰**：降水会导致激光雷达接收到的信号中出现外点（噪声），影响目标检测的准确性。例如，VLP-32C（~900纳米）的激光雷达在雪天会产生类似的干扰，这与Waymo在雾雪条件下的占用追踪结果相似。
-
-
-
-
-
-- **近距离降雨（50米以内）**：降雨对LiDAR的干扰较大，容易产生误报和漏报。
-- **远距离降雨（超过50米）**：随着雨势增大，降雨粒子更容易被LiDAR检测到，从而干扰原本的测量信号。
-- **干扰机制**：降雨粒子会使激光束偏折或反射回传感器，导致测距误差增加或无法检测到目标物体。
 
 
 
